# job-ai-bot

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  Job Assistant Menu.bat  Push To GitHub.bat  README.md  Run Pipeline.bat  Run Sample Pipeline.bat  SECURITY.md  Start Dashboard.bat  app.py  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: ci.yml
autofill/: bookmarklet.js  content-script.js  manifest.json  service-worker.js
config/: profile.json  scoring.json  targets.json
docs/: ARCHITECTURE.md  MAINTENANCE.md  OPERATING_WORKFLOW.md  PHASE_1_2_CHECKLIST.md  PLAN.md  ROADMAP.md
jobbot/: __init__.py  __main__.py  db.py  ingest.py  paths.py  review_queue.py  scoring.py  server.py  utils.py
sample_data/: sample_jobs.json
static/: app.js  index.html  styles.css
tests/: helpers.py  test_dedupe.py  test_ingest_logging.py  test_ingest_normalization.py  test_review_queue.py  test_scoring.py  test_server.py
