[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "job-ai-bot"
version = "0.1.0"
description = "Local job discovery and scoring assistant for PM/PO/BA roles with H-1B-aware review queues."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "prathit23" }]
dependencies = []

[project.scripts]
jobbot = "jobbot.__main__:main"

[tool.setuptools]
packages = ["jobbot"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
